Fix(signatures): Fixed signature spacing bug in composer from applySignature

--- a/internal_packages/composer-signature/styles/composer-signature.less
+++ b/internal_packages/composer-signature/styles/composer-signature.less
@@ -105,6 +105,7 @@
                 background-position: left;
                 background-position-x: 5%;
                 background-size: 10px;
+                padding-right: 0;
               }
             }
           }
